# Kafka-Structure-Streaming

./: pyproject.toml  sample_consumer.py  spark_kafka.py
.ipynb_checkpoints/: main-checkpoint.py
kafka_checkpoints/: .metadata.crc  metadata
kafka_checkpoints/offsets/: .0.crc  0
kafka_checkpoints/sources/0/: .0.crc  0
kafka_output/: .part-00000-32bfa800-32e4-4c0e-a976-298ca014d4eb-c000.snappy.parquet.crc  .part-00001-cf8ee65c-fb16-4fbb-b2b8-8c030b43f206-c000.snappy.parquet.crc  .part-00002-9d8e9a86-6dfb-454f-8d21-8053a6adcc82-c000.snappy.parquet.crc  part-00000-32bfa800-32e4-4c0e-a976-298ca014d4eb-c000.snappy.parquet  part-00001-cf8ee65c-fb16-4fbb-b2b8-8c030b43f206-c000.snappy.parquet  part-00002-9d8e9a86-6dfb-454f-8d21-8053a6adcc82-c000.snappy.parquet
kafka_output/_spark_metadata/: .0.crc  0
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  variable.tf
